--- a/public/css/app.css
+++ b/public/css/app.css
@@ -631,6 +631,9 @@ select {
 .invisible {
   visibility: hidden;
 }
+.static {
+  position: static;
+}
 .fixed {
   position: fixed;
 }
@@ -700,9 +703,6 @@ select {
 .mb-2 {
   margin-bottom: 0.5rem;
 }
-.mt-12 {
-  margin-top: 3rem;
-}
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -751,6 +751,9 @@ select {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.mt-12 {
+  margin-top: 3rem;
+}
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -759,12 +762,6 @@ select {
 }
 .mt-0 {
   margin-top: 0px;
-}
-.mb-1\.5 {
-  margin-bottom: 0.375rem;
-}
-.mb-1 {
-  margin-bottom: 0.25rem;
 }
 .block {
   display: block;
@@ -838,11 +835,11 @@ select {
 .w-8 {
   width: 2rem;
 }
-.w-96 {
-  width: 24rem;
-}
 .w-10 {
   width: 2.5rem;
+}
+.w-96 {
+  width: 24rem;
 }
 .w-48 {
   width: 12rem;
@@ -852,6 +849,9 @@ select {
 }
 .w-20 {
   width: 5rem;
+}
+.w-14 {
+  width: 3.5rem;
 }
 .w-screen {
   width: 100vw;
@@ -1162,17 +1162,13 @@ select {
   --tw-gradient-from: #ef4444;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(239 68 68 / 0));
 }
-.from-blue-600 {
-  --tw-gradient-from: #2563eb;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(37 99 235 / 0));
+.from-indigo-700 {
+  --tw-gradient-from: #4338ca;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(67 56 202 / 0));
 }
 .from-indigo-600 {
   --tw-gradient-from: #4f46e5;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(79 70 229 / 0));
-}
-.from-indigo-700 {
-  --tw-gradient-from: #4338ca;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(67 56 202 / 0));
 }
 .to-gray-900 {
   --tw-gradient-to: #111827;
@@ -1204,9 +1200,6 @@ select {
 }
 .p-6 {
   padding: 1.5rem;
-}
-.p-1 {
-  padding: 0.25rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1248,6 +1241,10 @@ select {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+.px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+}
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1272,14 +1269,6 @@ select {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
 }
-.px-1\.5 {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
-}
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1301,14 +1290,14 @@ select {
 .pt-2 {
   padding-top: 0.5rem;
 }
-.pr-2 {
-  padding-right: 0.5rem;
-}
-.pl-3 {
-  padding-left: 0.75rem;
+.pr-0\.5 {
+  padding-right: 0.125rem;
 }
 .pr-0 {
   padding-right: 0px;
+}
+.pl-3 {
+  padding-left: 0.75rem;
 }
 .pl-16 {
   padding-left: 4rem;
@@ -1327,15 +1316,6 @@ select {
 }
 .pt-4 {
   padding-top: 1rem;
-}
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-.pr-1 {
-  padding-right: 0.25rem;
-}
-.pr-0\.5 {
-  padding-right: 0.125rem;
 }
 .text-left {
   text-align: left;
@@ -1805,17 +1785,13 @@ select {
   --tw-gradient-from: #ef4444;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(239 68 68 / 0));
 }
-.group:hover .group-hover\:from-blue-600 {
-  --tw-gradient-from: #2563eb;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(37 99 235 / 0));
+.group:hover .group-hover\:from-indigo-700 {
+  --tw-gradient-from: #4338ca;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(67 56 202 / 0));
 }
 .group:hover .group-hover\:from-indigo-600 {
   --tw-gradient-from: #4f46e5;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(79 70 229 / 0));
-}
-.group:hover .group-hover\:from-indigo-700 {
-  --tw-gradient-from: #4338ca;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(67 56 202 / 0));
 }
 .group:hover .group-hover\:to-blue-500 {
   --tw-gradient-to: #3b82f6;
